# funops

./: .gitignore  .travis.yml  404.html  Gemfile  LICENSE  README.adoc  README.md  archive.html  build.sbt  cabal.sandbox.config  category.html  feed.xml  fuckops.cabal  index.html  publish.sbt  shell.nix  tag.html
2016/08/19/: algebraic-data-types.html
etc/: checks-example.conf
project/: plugins.sbt
public/css/: main.css
src/: Main.hs  ParseLogs.hs
src/TypedOps/Checker/: Core.hs  Types.hs
src/jekyll/: 404.html  CNAME  _config.yml  feed.xml  tag.html
src/jekyll/_data/: links.yml  typedops.yml
src/jekyll/_includes/: footer.html  header.html  newsletter.html
src/jekyll/_layouts/: default.html  page.html  post.html
src/jekyll/public/css/: _layout.scss  main.scss
src/main/drafts/: 2016-06-25-getting-recursion-right-by-avoiding-it.md
src/main/tut/: 2015-10-09-why-use-types.md  2015-11-05-extending-syntax.md  2016-05-31-unreasonable-effectiveness-of-reasoning-understanding-bottom.md  2016-08-19-algebraic-data-types.md  2016-08-21-typeclasses-as-extensible-interfaces.md  2017-04-22-composable-sequenced-processes.md  why-types.md
tutorials/2015/10/09/: why-use-types.html
tutorials/2015/11/05/: extending-syntax.html
tutorials/2016/05/25/: unreasonable-effectiveness-of-reasoning-understanding-bottom.html
tutorials/2017/04/22/: composable-sequenced-processes.html
