-- see http://haskell.org/cabal/users-guide/
name:                fuckops
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
synopsis:            Fuck Ops (as it is). The current mentality is absurd.
-- description:
homepage:            https://github.com/typedops/fuckops
license:             BSD3
license-file:        LICENSE
author:              Susan Potter
maintainer:          me@susanpotter.net
copyright:           2014 (c) Susan Potter. All rights reserved.
-- category:
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


executable fuckops
  main-is:
      Main.hs
  -- other-extensions:
  build-depends:
      base >=4.6 && <4.7
    , argparser ==0.3.2
  hs-source-dirs:
      src
    , test
  default-language:
    Haskell2010

executable parselogs
  main-is:
      ParseLogs.hs
  -- other-extensions:
  build-depends:
      base >=4.6 && <4.7
    , attoparsec ==0.12.0.*
  hs-source-dirs:
      src
    , test
  default-language:
    Haskell2010

library
  build-depends:
      base >=4.6 && <4.7
    , aeson ==0.7.0.*
    , hashable ==1.2.2.*
    , configurator ==0.2.0.*
    , argparser ==0.3.2
    , bytestring ==0.10.0.*
  exposed-modules:
      TypedOps.Checker.Types
    , TypedOps.Checker.Core
    , TypedOps.JMX.Types
    , TypedOps.JMX.Instances
  hs-source-dirs:
      src
    , test
  default-language:
    Haskell2010

test-suite test-fuckops
  type:
    exitcode-stdio-1.0
  main-is:
    Tests.hs
  hs-source-dirs:
      src
    , test
  build-depends:
      base >=4.6 && <4.7
    , fuckops
  default-language:
    Haskell2010
